--- a/index.html
+++ b/index.html
@@ -73,15 +73,18 @@
           <li><a class="sign-up">Sign Up</a></li>
         </ul>
       </nav>
+      
     </header>
+    <article>
+      <h1>A modern publishing platform</h1>
+      <p>Grow your audience and build your online brand</p>
 
-    <h1>A modern publishing platform</h1>
-    <p>Grow your audience and build your online brand</p>
-
-    <div class="btns">
-      <a href="#" class="btn btn-primary">Start for Free</a>
-      <a href="#" class="btn btn-secondary">Learn More</a>
-    </div>
+      <div class="btns">
+        <a href="#" class="btn btn-primary">Start for Free</a>
+        <a href="#" class="btn btn-secondary">Learn More</a>
+      </div>
+    </article>
+    
   </div>
 
   <main>
