--- a/index.html
+++ b/index.html
@@ -18,64 +18,63 @@
 <body>
   <div class="intro">
     <header>
-      <img src="images/logo.svg" alt="blogr logo">
-      <button type="button" class="hamburger" id="hamburger">
-        <img src="images/icon-hamburger.svg" alt="" aria-label="open nav" class="open">
-        <img src="images/icon-close.svg" alt="" aria-label="close nav" class="close">
-      </button>
-      <nav id="primary-nav" aria-label="primary">
-        <ul>
-          <li class="product summary">
-            <a>Product
-              <picture>
-                <source media="(min-width: 1440px)" srcset="images/icon-arrow-light.svg">
-                <img src="images/icon-arrow-dark.svg" alt="">
-              </picture>
-            </a>
-            <ul class="dropdown product-dropdown">
-              <li><a>Overview</a></li>
-              <li><a>Pricing</a></li>
-              <li><a>Marketplace</a></li>
-              <li><a>Features</a></li>
-              <li><a>Integrations</a></li>
-            </ul>
-          </li>
+      <div class="flex">
+        <img src="images/logo.svg" alt="blogr logo">
+        <button type="button" class="hamburger" id="hamburger">
+          <img src="images/icon-hamburger.svg" alt="" aria-label="open nav" class="open">
+          <img src="images/icon-close.svg" alt="" aria-label="close nav" class="close">
+        </button>
+        <nav id="primary-nav" aria-label="primary">
+          <ul>
+            <li class="product summary">
+              <a>Product
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="images/icon-arrow-light.svg">
+                  <img src="images/icon-arrow-dark.svg" alt="">
+                </picture>
+              </a>
+              <ul class="dropdown product-dropdown">
+                <li><a>Overview</a></li>
+                <li><a>Pricing</a></li>
+                <li><a>Marketplace</a></li>
+                <li><a>Features</a></li>
+                <li><a>Integrations</a></li>
+              </ul>
+            </li>
 
-          <li class="company summary">
-            <a>Company
-              <picture>
-                <source media="(min-width: 1440px)" srcset="images/icon-arrow-light.svg">
-                <img src="images/icon-arrow-dark.svg" alt="">
-              </picture>
-            </a>
-            <ul class="dropdown company-dropdown">
-              <li><a>About</a></li>
-              <li><a>Team</a></li>
-              <li><a>Blog</a></li>
-              <li><a>Careers</a></li>
-            </ul>
-          </li>
+            <li class="company summary">
+              <a>Company
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="images/icon-arrow-light.svg">
+                  <img src="images/icon-arrow-dark.svg" alt="">
+                </picture>
+              </a>
+              <ul class="dropdown company-dropdown">
+                <li><a>About</a></li>
+                <li><a>Team</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Careers</a></li>
+              </ul>
+            </li>
 
-          <li class="connect summary">
-            <a>Connect
-              <picture>
-                <source media="(min-width: 1440px)" srcset="images/icon-arrow-light.svg">
-                <img src="images/icon-arrow-dark.svg" alt="">
-              </picture>
-            </a>
-            <ul class="dropdown connect-dropdown">
-              <li><a>Contact</a></li>
-              <li><a>Newsletter</a></li>
-              <li><a>LinkedIn</a></li>
-            </ul>
+            <li class="connect summary">
+              <a>Connect
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="images/icon-arrow-light.svg">
+                  <img src="images/icon-arrow-dark.svg" alt="">
+                </picture>
+              </a>
+              <ul class="dropdown connect-dropdown">
+                <li><a>Contact</a></li>
+                <li><a>Newsletter</a></li>
+                <li><a>LinkedIn</a></li>
+              </ul>
   
-          <li><a class="login">Login</a></li>
-          <li><a class="sign-up">Sign Up</a></li>
-        </ul>
-      </nav>
-      
-    </header>
-    <article>
+            <li><a class="login">Login</a></li>
+            <li><a class="sign-up">Sign Up</a></li>
+          </ul>
+        </nav>
+      </div>  
       <h1>A modern publishing platform</h1>
       <p>Grow your audience and build your online brand</p>
 
@@ -83,7 +82,7 @@
         <a href="#" class="btn btn-primary">Start for Free</a>
         <a href="#" class="btn btn-secondary">Learn More</a>
       </div>
-    </article>
+    </header>
     
   </div>
 
